<resources>
    <string name="app_name">Jewelry Store</string>
    <string name="ok">OK</string>
    <string name="cancel">Отмена</string>
    <string name="error_invalid_email">Неверный формат E-mail</string>
    <string name="error_empty_field">Заполните поле</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Пароль</string>
    <string name="name">Имя</string>
    <string name="address_for_delivery">Адрес для доставки</string>
    <string name="phone">Телефон</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="registration">Регистрация</string>
    <string name="sign_in">Войти</string>
    <string name="title_orders">Заказы</string>
    <string name="title_products">Товары</string>
    <string name="title_product_types">Типы товаров</string>
    <string name="delete_request">Удалить?</string>
    <string name="update_status_request">Обновить статус?</string>
    <string name="cancel_request">Отменить?</string>
    <string name="add_order_request">Создать заказ?</string>
    <string name="product_type_name">Тип товара</string>
    <string name="product_name">Наименование товара</string>
    <string name="price">Цена</string>
    <string name="material">Материал</string>
    <string name="color">Цвет</string>
    <string name="country">Страна</string>
    <string name="weight">Масса</string>
    <string name="manufacture_date">Дата производства</string>
    <string name="add">Добавить</string>
    <string name="price_value">Цена: %s</string>
    <string name="material_value">Материал: %s</string>
    <string name="color_value">Цвет: %s</string>
    <string name="country_value">Страна: %s</string>
    <string name="weight_value">Масса: %s</string>
    <string name="count_value">Количество: %s</string>
    <string name="manufacture_date_value">Дата производства: %s</string>
    <string name="order_id">Заказ №%d</string>
    <string name="order_status">Статус заказа: %s</string>
    <string name="user_email">E-mail пользователя: %s</string>
    <string name="user_name">Имя пользователя: %s</string>
    <string name="order_date">Дата заказа: %s</string>
    <string name="order_price">Сумма: %s</string>
    <string name="ordered_products">Заказанные товары</string>
    <string name="title_catalog">Каталог</string>
    <string name="title_cart">Корзина</string>
    <string name="title_wish_list">Избранное</string>
    <string name="make_order">Оформить заказ</string>
    <string name="count">Количество</string>
    <string name="added_to_cart">Товар успешно добавлен в корзину</string>
    <string name="action_cancel">отменить</string>
</resources>