<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="10dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="5dp"
    app:cardElevation="2dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:background="?attr/selectableItemBackground">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/purple_700"
                android:textSize="16sp"
                tools:text="@string/order_id"/>


            <TextView
                android:id="@+id/tvOrderStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/order_status"/>

            <TextView
                android:id="@+id/tvUserEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/user_email"/>

            <TextView
                android:id="@+id/tvUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/user_name"/>

            <TextView
                android:id="@+id/tvOrderDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/order_date"/>

            <TextView
                android:id="@+id/tvOrderPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/order_price"/>
        </LinearLayout>

        <TextView
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:textColor="@color/red"
            android:paddingVertical="5dp"
            android:text="@string/action_cancel"/>

    </RelativeLayout>
</androidx.cardview.widget.CardView>